--- a/q5.html
+++ b/q5.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <img src="./working-women.jpg" alt="working women image" />
+    <img src="https://picsum.photos/id/1/600/600" alt="working women image" />
 
     <p>We will be learning the following things this week:</p>
     <div style="margin-bottom: 30px;" class="box">
