--- a/audio.html
+++ b/audio.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<h2>A simple HTML music player</h2>
 <audio controls>
-  <source src="Sample-OGG-File.ogg" type="audio/ogg">
+  <source src="https://www.computerhope.com/jargon/m/example.mp3" type="audio/ogg">
   <source src="horse.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-
+<h4>Click on the play icon to play the audio.</h4>
 </body>
 </html>
-
